Implementation of a menu using only <a> tags (without <li> or <div>), with an attempt to fix text overflow issues when zooming

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     background-color: #f8f8f8;
     color: #333;
     line-height: 1.6;
-    font-size: 1rem;
+    font-size: 16px;
     max-width: 100vw;
     overflow-x: hidden;
 }
@@ -34,32 +34,44 @@ body {
     display: flex;
     /* align-items: center; */
     border: 3px solid black;
-    gap: 30%;
+    /* gap: 30%; */
     /* overflow: hidden; */
     /* flex-wrap: wrap ; */
 }
 
 .logo_header {
-    /*flex:1;  Je pourrais les remplacer si besoin par des width en % si besoin
-    /* width: 30%; */
+    
+    width: 5%;
     background-color: #350ba7;
 }
-
+.div_header0 {
+    background-color: #4a1a1a;
+    width: 30%;
+}
 .desktop_menu {
-    flex:4; /*Je pourrai les remplacer si besoin par des width en % si besoin*/
     background-color: #46c346;
-    /* width: 70%; */
+    width: 70%;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    
+}
+
+.desktop_menu a {
+    background-color: #fff;
+    padding: 0.3rem;
+    font-size: 200;
+    z-index:1 ;
+    color : red;
+    font-size:1.5rem;
+    display:block;
 }
 
 .hdr_a img {
     width: 50%;
     height: 100%;
 }
-
-
 
 .nav {
     background-color: #a6a9a8;
@@ -77,12 +89,7 @@ body {
 }
 .nav_1 h1, p, a {
     max-width: fit-content;
-    max-height: 100%;
 }
-.nav_1 p {
-    max-width: fit-content;
-}
-
 .nav_2 {
     width: 50%;
 }
